--- a/Source/Lectures/L11_File_IO/authors.txt
+++ b/Source/Lectures/L11_File_IO/authors.txt
@@ -1,6 +1,6 @@
 ID    First Name      Last Name       Birth Year
 1     J.K.            Rowling         1965      
 2     Stephen         King            1947      
-3     George          Orwell          1903      
+3     George                          1903      
 4     Agatha          Christie        1890      
-5     Haruki          Murakami        1949      
+5     Haruki          Murakttttttttttttttttttttttttttami 1949      
